Closed Bug 1495857 Opened 6 years ago Closed 6 years ago

WebGL "Vertex attrib array" error reporting bug

Categories

(Core :: Graphics: CanvasWebGL, defect, P3)

62 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- fixed

People

(Reporter: hugo.amiard, Assigned: jnicol)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:62.0) Gecko/20100101 Firefox/62.0

Steps to reproduce:

In WebGL: enable a vertex attrib array other than 0 without binding a buffer.
The following code (see link) has a bug : i is never incremented.
https://dxr.mozilla.org/mozilla-central /rev/a461fe03fdb07218b7f50e92c59dde64b8f8a5b0/dom/canvas/WebGLProgram.cpp#485



Actual results:

Error message "Vertex attrib array 0 is enabled but has no buffer bound." regardless of the index of the actual enabled vertex attrib array.


Expected results:

Error message should be "Vertex attrib array N is enabled but has no buffer bound." where N is the actual enabled vertex attrib array.
Component: Untriaged → Canvas: WebGL
Product: Firefox → Core
Assignee: nobody → jnicol
Priority: -- → P3
QA Contact: jgilbert
QA Contact: jgilbert
Pushed by jnicol@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/08971360de61
Ensure correct vertex attrib array index is output in error message r=jgilbert
https://hg.mozilla.org/mozilla-central/rev/08971360de61
Status: UNCONFIRMED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: