Bug 1495857 - Ensure correct vertex attrib array index is output in error message r=jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D7868